# excipy

./: .gitignore  .pre-commit-config.yaml  AUTHORS  LICENSE  MANIFEST.in  README.md  environment.yml  pyproject.toml  setup.py  tox.ini
docs/source/: conf.py  excipy.clib.rst  excipy.models.rst  excipy.rst  index.rst  modules.rst
examples/: list_examples.sh
examples/data/: out.h5
examples/ex1/: run
examples/ex2/: run
examples/ex3/: run
examples/ex4/: run
examples/ex5/: run
examples/ex6/: run
examples/ex7/: loading_excipy_output.ipynb
examples/ex8/: run
excipy/: Makefile  \  __init__.py  cli.py  database.py  descriptors.py  elec.py  intf_ommp.py  molecule.py  polar.py  regression.py  selection.py  tmu.f90  trajectory.py  util.py
excipy/clib/: __init__.py
excipy/cython/: distances_diffmask.pyx  map_polarizable_atoms.pyx  retain_full_residues.pyx  tmu.pyx
excipy/database/atom_names/: BCL.json  CHL.json  CLA.json
excipy/database/models/GPR_env_CHL/variables/: variables.data-00000-of-00001  variables.index
excipy/database/models/GPR_env_CLA/variables/: variables.data-00000-of-00001  variables.index
excipy/database/models/GPR_vac_CHL/variables/: variables.data-00000-of-00001  variables.index
excipy/database/models/GPR_vac_CLA/variables/: variables.data-00000-of-00001  variables.index
excipy/database/rescalings/: BCL.json
excipy/database/rescalings/JCTC2023/: CHL.json  CLA.json
excipy/models/: __init__.py  jctc2023.py
tests/excipy/: test_descriptors.py  test_trajectory.py
